--- a/djpeg.1
+++ b/djpeg.1
@@ -1,4 +1,4 @@
-.TH DJPEG 1 "12 December 1994"
+.TH DJPEG 1 "15 June 1995"
 .SH NAME
 djpeg \- decompress a JPEG file to an image file
 .SH SYNOPSIS
@@ -231,6 +231,7 @@ itself is overridden by an explicit
 .BR \-maxmemory .
 .SH SEE ALSO
 .BR cjpeg (1),
+.BR jpegtran (1),
 .BR rdjpgcom (1),
 .BR wrjpgcom (1)
 .br
