--- a/rdjpgcom.1
+++ b/rdjpgcom.1
@@ -1,4 +1,4 @@
-.TH RDJPGCOM 1 "8 July 1994"
+.TH RDJPGCOM 1 "15 June 1995"
 .SH NAME
 rdjpgcom \- display text comments from a JPEG file
 .SH SYNOPSIS
@@ -39,6 +39,7 @@ header correctly.
 .SH SEE ALSO
 .BR cjpeg (1),
 .BR djpeg (1),
+.BR jpegtran (1),
 .BR wrjpgcom (1)
 .SH AUTHOR
 Independent JPEG Group
