--- a/wrjpgcom.1
+++ b/wrjpgcom.1
@@ -1,4 +1,4 @@
-.TH WRJPGCOM 1 "30 August 1994"
+.TH WRJPGCOM 1 "15 June 1995"
 .SH NAME
 wrjpgcom \- insert text comments into a JPEG file
 .SH SYNOPSIS
@@ -97,6 +97,7 @@ or equivalently
 .SH SEE ALSO
 .BR cjpeg (1),
 .BR djpeg (1),
+.BR jpegtran (1),
 .BR rdjpgcom (1)
 .SH AUTHOR
 Independent JPEG Group
